Fixed build order of top-level build and numerous compiler warnings